Fixed My Bookings font size and alignment to match both desktop and mobile

--- a/client/src/public/css/main.css
+++ b/client/src/public/css/main.css
@@ -196,3 +196,7 @@
   flex-flow: row wrap;
   justify-content: flex-start;
 }
+
+.booking-history {
+  font-size: clamp(0.5rem, 2vw, 1rem);
+}
